--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="onesay"><script>onesay()</script></div>
 	<nav>
 		<ul>
-			<li><a href="https://arley.cn/" target="_blank" title="Hexo博客" class="iconfont icon-home2"><span>博客</span></a></li>
+			<li><a href="https://blog.arley.cn/" target="_blank" title="Hexo博客" class="iconfont icon-home2"><span>博客</span></a></li>
 			<li><a href="https://arley.fun/" target="_blank" title="Typecho博客" class="iconfont icon-home2"><span>博客</span></a></li>
 			<li><a href="https://pun.arley.cn/" target="_blank" title="私人云盘" class="iconfont icon-cloud-full"><span>云盘</span></a></li>
 			<li><a href="https://bm.arley.fun/" target="_blank" title="书签导航" class="iconfont icon-labelb"><span>导航</span></a></li>
