--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <link rel="icon" type="image/png" href="favicon.ico"/>
 <meta http-equiv="content-type" content="*; charset=utf-8" />
 <meta name="description" content="Arley导航" />
-<script type="text/javascript" src="https://arley.fun/onesay/?format=js&charset=utf-8"></script>
 <script src="js/skel.min.js"></script>
 <script src="js/init.js"></script>
 <link rel="stylesheet" href="css/iconfont.css">
@@ -15,16 +14,15 @@
 <body class="loading">
 	<div id="wrapper">
 	<div id="bg" style="display: none;" class="phone-class"></div>
-	<video src="https://arley.fun/usr/video/2.mp4" class="pc-class" loop width="100%" height="110%" autoplay="autoplay" muted="muted" cue-before:none; id="sp"></video>
+	<video src="https://pan.arley.cn/api/raw/?path=/Videos/2.mp4" class="pc-class" loop width="100%" height="110%" autoplay="autoplay" muted="muted" cue-before:none; id="sp"></video>
 	<div id="overlay"></div>
 	<div id="main">
 <header id="header">
 	<h1>Arley | 导航</h1>
-	<div id="onesay"><script>onesay()</script></div>
+
 	<nav>
 		<ul>
 			<li><a href="https://blog.arley.cn/" target="_blank" title="Hexo博客" class="iconfont icon-home2"><span>博客</span></a></li>
-			<li><a href="https://arley.fun/" target="_blank" title="Typecho博客" class="iconfont icon-home2"><span>博客</span></a></li>
 			<li><a href="https://pan.arley.cn/" target="_blank" title="私人云盘" class="iconfont icon-cloud-full"><span>云盘</span></a></li>
 			<li><a href="https://bm.arley.fun/" target="_blank" title="书签导航" class="iconfont icon-labelb"><span>导航</span></a></li>
 		</ul>
@@ -42,8 +40,8 @@
 </div>
 <script>
 	const srcs = [
-		"https://arley.fun/usr/video/1.mp4",
-		"https://arley.fun/usr/video/2.mp4"
+		"https://pan.arley.cn/api/raw/?path=/Videos/1.mp4",
+		"https://pan.arley.cn/api/raw/?path=/Videos/2.mp4"
 	]
 	function changeVal(){
 		var voice=document.querySelector("#voice");
