--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <link rel="stylesheet" href="css/iconfont.css">
 <link rel="stylesheet" href="css/style.css"/>
 <link rel="stylesheet" href="css/style-wide.css"/>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?1f6f48eed135f0da271c40ebac27de90";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </head>
 <body class="loading">
 	<div id="wrapper">
