--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ var _hmt = _hmt || [];
 			<li><a href="https://blog.arley.cn/" target="_blank" title="Hexo博客" class="iconfont icon-home2"><span>博客</span></a></li>
 			<li><a href="https://pan.arley.cn/" target="_blank" title="私人云盘" class="iconfont icon-cloud-full"><span>云盘</span></a></li>
 			<li><a href="https://bm.arley.cn/" target="_blank" title="书签导航" class="iconfont icon-labelb"><span>导航</span></a></li>
+			<li><a href="https://github.com/arleycn" target="_blank" title="Github" class="iconfont icon-github-fill"><span>Github</span></a></li>
 		</ul>
 	</nav>
 </header>
