--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <link rel="icon" type="image/png" href="favicon.ico"/>
 <meta http-equiv="content-type" content="*; charset=utf-8" />
 <meta name="description" content="Arley导航" />
-<script src="js/skel.min.js"></script>
-<script src="js/init.js"></script>
-<link rel="stylesheet" href="css/iconfont.css">
-<link rel="stylesheet" href="css/style.css"/>
-<link rel="stylesheet" href="css/style-wide.css"/>
+<script src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/js/skel.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/js/init.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/css/iconfont.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/css/style.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/css/style-wide.css"/>
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -41,9 +41,9 @@ var _hmt = _hmt || [];
 <!-- Footer -->
 <footer id="footer">
 	<div>
-		<img src="public/close.png" onclick="changeVal()" class="ival" style="margin-right:2rem ;" id="voice"/>
-		<img src="public/play.png" onclick="ispaly()" class="ival" id="bofang"/>
-		<img src="public/next.png" onclick="nextPaly()" class="ival" style="margin-left:2rem ;" id="next"/>
+		<img src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/close.png" onclick="changeVal()" class="ival" style="margin-right:2rem ;" id="voice"/>
+		<img src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/play.png" onclick="ispaly()" class="ival" id="bofang"/>
+		<img src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/next.png" onclick="nextPaly()" class="ival" style="margin-left:2rem ;" id="next"/>
 	</div>
 </footer>
 </div>
@@ -58,10 +58,10 @@ var _hmt = _hmt || [];
 		var video=document.querySelector("#sp");
 		if(video.muted) {
 			video.muted=false;
-			voice.setAttribute("src","public/open.png");
+			voice.setAttribute("src","https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/open.png");
 		}else{
 			video.muted=true;
-			voice.setAttribute("src","public/close.png");
+			voice.setAttribute("src","https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/close.png");
 		}
 	}
 	//播放暂停
@@ -69,10 +69,10 @@ var _hmt = _hmt || [];
 		var bofang=document.querySelector("#bofang");
 		var video=document.querySelector("#sp");
 		if(video.paused) {
-			bofang.setAttribute("src","public/play.png");
+			bofang.setAttribute("src","https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/play.png");
 			video.play();
 		}else {
-			bofang.setAttribute("src","public/pause.png");
+			bofang.setAttribute("src","https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/pause.png");
 			video.pause();
 		}
 		}
@@ -88,7 +88,7 @@ var _hmt = _hmt || [];
 		 	video.src = srcs[index + 1];
 		 }
 		//更改播放图标
-		 	bofang.setAttribute("src","public/play.png");
+		 	bofang.setAttribute("src","https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/play.png");
 		 }
 </script>
 <style>
