--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ var _hmt = _hmt || [];
 	<div id="main">
 <header id="header">
 	<h1>Arley | 导航</h1>
-
+	<div id="onesay"><script>onesay()</script></div>
 	<nav>
 		<ul>
 			<li><a href="https://blog.arley.cn/" target="_blank" title="Hexo博客" class="iconfont icon-home2"><span>博客</span></a></li>
@@ -91,6 +91,7 @@ var _hmt = _hmt || [];
 		 	bofang.setAttribute("src","https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/public/play.png");
 		 }
 </script>
+<script type="text/javascript" src="https://onesayapi.vercel.app/api/?format=js&charset=utf-8"></script>
 <style>
 	.pc-class{
 		object-fit: cover;
