--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ var _hmt = _hmt || [];
 <header id="header">
 	<h1>Arley | 导航</h1>
 	<script type="text/javascript" src="https://onesayapi.vercel.app/api/?format=js&charset=utf-8"></script>
-	<div id="onesay" style="font-size:1.2em"><script>onesay()</script></div>
+	<div id="onesay" style="font-size:1.2em; margin-top: 20px;"><script>onesay()</script></div>
 	<nav>
 		<ul>
 			<li><a href="https://blog.arley.cn/" target="_blank" title="Hexo博客" class="iconfont icon-home2"><span>博客</span></a></li>
