--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/js/skel.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/js/init.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/css/iconfont.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/css/style.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/css/style.min.css"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/css/style-wide.css"/>
 <script>
 var _hmt = _hmt || [];
