--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Arley | 导航</title>
-<link rel="icon" type="image/png" href="favicon.ico"/>
+<link rel="icon" type="image/x-icon" href="favicon.ico"/>
+<link rel="bookmark" type="image/x-icon" href="64x64_favicon.ico"/>
 <meta http-equiv="content-type" content="*; charset=utf-8" />
 <meta name="description" content="Arley导航" />
 <script src="https://cdn.jsdelivr.net/gh/arleycn/arleycn.github.io@latest/js/skel.min.js"></script>
