--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ var _hmt = _hmt || [];
 <body class="loading">
 	<div id="wrapper">
 	<div id="bg" style="display: none;" class="phone-class"></div>
-	<video src="https://120.53.244.110/CDN/video/2.mp4" class="pc-class" loop width="100%" height="110%" autoplay="autoplay" muted="muted" cue-before:none; id="sp"></video>
+	<video src="https://pan.arley.cn/api/raw/?path=/Videos/1.mp4" class="pc-class" loop width="100%" height="110%" autoplay="autoplay" muted="muted" cue-before:none; id="sp"></video>
 	<div id="overlay"></div>
 	<div id="main">
 <header id="header">
@@ -52,8 +52,8 @@ var _hmt = _hmt || [];
 </div>
 <script>
 	const srcs = [
-		"https://120.53.244.110/CDN/video/1.mp4",
-		"https://120.53.244.110/CDN/video/2.mp4"
+		"https://pan.arley.cn/api/raw/?path=/Videos/1.mp4",
+		"https://pan.arley.cn/api/raw/?path=/Videos/2.mp4"
 	]
 	function changeVal(){
 		var voice=document.querySelector("#voice");
